Added Sync with Discord
Added Sync with Discord, added clear data

--- a/popup.html
+++ b/popup.html
@@ -50,6 +50,9 @@
         <input type="text" id="name" name="name"><br><br>
         
         <button type="button" id="submit" value="Submit">Submit</button>
+        <button type="button" id="clear" value="Clear Data">Clear Data</button>
+        <button type="button" id="disordoauth2" value="Sync With Discord">Sync Name and Avatar with Discord</button>
+
         <p id="refresh-msg" style="visibility: hidden; color: red">Changes Saved - If you have any firefly tabs open, refresh to see changes</p>
     </body>
 </html>
